--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.6.0
 certifi==2017.4.17
 chardet==3.0.4
 decorator==4.0.11
+python-dotenv==1.0.0
 flake8==3.3.0
 idna==2.5
 ipython==6.1.0
