--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,7 @@ ENV/
 
 # workspace files are user-specific
 *.sublime-workspace
+*.vscode
 
 # project files should be checked into the repository, unless a significant
 # proportion of contributors will probably not be using SublimeText
